--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     ]
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "bootstrap": "^5.3.2",
+    "mdb-react-ui-kit": "^7.2.0",
     "react-bootstrap": "^2.10.1"
   }
 }
