--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "bootstrap": "^5.3.2",
     "mdb-react-ui-kit": "^7.2.0",
     "react-bootstrap": "^2.10.1"
